--- a/wp-content/themes/wp-dashboard/html/src/assets/css/custom.css
+++ b/wp-content/themes/wp-dashboard/html/src/assets/css/custom.css
@@ -205,3 +205,24 @@ input:placeholder-shown,
 textarea:placeholder-shown {
     @apply bg-white;
 }
+.form-wrap input[type="text"],
+.form-wrap input[type="email"],
+.form-wrap textarea {
+	@apply w-full border-primary focus:border-quaternary focus:ring-primary bg-quaternary text-white;
+}
+input[type="text"],
+input[type="email"] {
+	@apply rounded-lg;
+}
+.form-wrap p {
+	@apply m-0;
+}
+.form-wrap textarea {
+	@apply max-h-36 rounded-lg;
+}
+.inputfile {
+	@apply block w-full text-sm text-primary;
+}
+.inputfile::file-selector-button {
+	@apply mr-4 rounded-full border-0 bg-quaternary py-2 px-4 text-sm font-semibold text-primary;
+}
